--- a/index.html
+++ b/index.html
@@ -4,9 +4,48 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
+    <script
+      src="https://kit.fontawesome.com/0f0e16d051.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Paint JS</title>
   </head>
   <body>
+    <div class="first">
+      <div class="title">This is Magic board</div>
+      <canvas class="canvas"></canvas>
+    </div>
+
+    <div class="controls__range">
+      <input
+        type="range"
+        id="jsRange"
+        min="0.1"
+        max="5.0"
+        value="2.5"
+        step="0.1"
+      />
+    </div>
+    <div class="button_mod">
+      <button class="a-paint">FILL</button>
+      <button class="a-save">SAVE</button>
+      <button class="a-clear">CLEAR</button>
+    </div>
+    <div class="colors">
+      <button class="color" style="background-color: #2c2c2c;"></button>
+      <button class="color" style="background-color: white;"></button>
+      <button class="color" style="background-color: #ff3b30;"></button>
+      <button class="color" style="background-color: #ff9500;"></button>
+      <button class="color" style="background-color: #ffcc00;"></button>
+      <button class="color" style="background-color: #4cd963;"></button>
+      <button class="color" style="background-color: #5ac8fa;"></button>
+      <button class="color" style="background-color: #0579ff;"></button>
+      <button class="color" style="background-color: #5856d6;"></button>
+      <button id="randomcolor" style="text-align: center;">
+        Random
+      </button>
+    </div>
+
     <script src="app.js"></script>
   </body>
 </html>
